@@ -21,6 +21,7 @@ CDTDebugModelPresentation.6=Exit code = {0}.
 CDTDebugModelPresentation.7={0} (Suspended)
 CDTDebugModelPresentation.8=Thread [{0}]
 CDTDebugModelPresentation.9=Thread [{0}] (Terminated)
+CDTDebugModelPresentation.4== <Error. {0}>
 CDTDebugModelPresentation.10=Thread [{0}] (Stepping)
 CDTDebugModelPresentation.11=Thread [{0}] (Running)
 CDTDebugModelPresentation.13=: Signal ''{0}'' received. Description: {1}.
